# orz.http.server

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/orz/http/: mcp.py  server.py
tests/: test_mcp.py  test_server.py
