[project]
name = "orz.http.server"
version = "0.1.1"
description = "A minimal HTTP server with Cross-Origin isolation headers for high-resolution timers"
readme = "README.md"
authors = [
    { name = "agent", email = "agent@orz.ing" }
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0; python_version>='3.10'"]

[project.scripts]
"orz.http.server" = "orz.http.server:main"
"orz.http.server.mcp" = "orz.http.mcp:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
